<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">NMedia!</string>
    <string name="netology" translatable="false">Нетология. Университет интернет-профессий</string>
    <string name="body" translatable="false">Привет, это новая Нетология! Когда-то Нетология
        начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке,
        аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных
        профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила,
        которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия —
        помочь встать на путь роста и начать цепочку перемен — http://netolo.gy.gy/fyb</string>
    <string name="date" translatable="false">24 ноября в 19:21</string>
    <string name="likes" translatable="false">108</string>
    <string name="share" translatable="false">100</string>
    <string name="view" translatable="false">322</string>
</resources>
